--- a/index.html
+++ b/index.html
@@ -3,60 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="memorama" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Memorama</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="main.js" defer></script>
 </head>
-<link rel="stylesheet" href="style.css" />
-<script src="main.js"></script>
 <body>
+
+    <!-- BARRA SUPERIOR -->
+    <header>
+        <div>IMM - MEMORAMA</div>
+    </header>
+
     <h4>CREADO POR IMM</h4>
-<main>
-<section class="section1">
-    
-    <table>
-        <tr>
-            <td><button id="0" class="carta" onclick="mostrar(0)"></button></td>
-            <td> <button id="1" class="carta" onclick="mostrar(1)"></button></td>
-            <td><button id="2" class="carta" onclick="mostrar(2)"></button></td>
-            <td><button id="3" class="carta" onclick="mostrar(3)"></button> </td>
-        </tr>
-        <tr>
-            <td><button id="4" class="carta" onclick="mostrar(4)"></button></td>
-            <td> <button id="5"class="carta" onclick="mostrar(5)"></button></td>
-            <td><button id="6" class="carta" onclick="mostrar(6)"></button></td>
-            <td><button id="7" class="carta" onclick="mostrar(7)"></button> </td>
-        </tr>
-        <tr>
-            <td><button id="8"class="carta" onclick="mostrar(8)"></button></td>
-            <td> <button id="9" class="carta"onclick="mostrar(9)"></button></td>
-            <td><button id="10"class="carta" onclick="mostrar(10)"></button></td>
-            <td><button id="11"class="carta" onclick="mostrar(11)"></button> </td>
-        </tr>
-        <tr>
-            <td><button id="12"class="carta" onclick="mostrar(12)"></button></td>
-            <td> <button id="13"class="carta" onclick="mostrar(13)"></button></td>
-            <td><button id="14"class="carta" onclick="mostrar(14)"></button></td>
-            <td><button id="15"class="carta" onclick="mostrar(15)"></button> </td>
-        </tr>
-    </table>    
-</section>
-<section class="section2">
-    <h3>MENU</h3>
-    <nav>
-        <ul>
-          <li><a href="#" onclick="toAnimales()"> Animales</a></li>
-          <br>
-          <li><a href="#" onclick="toNumbers()"> Números </a></li>
-          <br>
-          <li><a href="#" onclick="toIngles()"> Ingles</a></li>
-          <br>
-          <li><a href="#" onclick="toCatalan()"> Catalan</a></li>
-       </ul>
-      </nav>
-      
-      <input type="button" id="volver" value="Volver a Jugar" onclick="reset()"/>
-</section>
-</main>
+
+    <main>
+        <!-- TABLERO DE TARJETAS -->
+        <section class="section1">
+            <table>
+                <tr>
+                    <td><button id="0" class="carta" onclick="mostrar(0)"></button></td>
+                    <td><button id="1" class="carta" onclick="mostrar(1)"></button></td>
+                    <td><button id="2" class="carta" onclick="mostrar(2)"></button></td>
+                    <td><button id="3" class="carta" onclick="mostrar(3)"></button></td>
+                </tr>
+                <tr>
+                    <td><button id="4" class="carta" onclick="mostrar(4)"></button></td>
+                    <td><button id="5" class="carta" onclick="mostrar(5)"></button></td>
+                    <td><button id="6" class="carta" onclick="mostrar(6)"></button></td>
+                    <td><button id="7" class="carta" onclick="mostrar(7)"></button></td>
+                </tr>
+                <tr>
+                    <td><button id="8" class="carta" onclick="mostrar(8)"></button></td>
+                    <td><button id="9" class="carta" onclick="mostrar(9)"></button></td>
+                    <td><button id="10" class="carta" onclick="mostrar(10)"></button></td>
+                    <td><button id="11" class="carta" onclick="mostrar(11)"></button></td>
+                </tr>
+                <tr>
+                    <td><button id="12" class="carta" onclick="mostrar(12)"></button></td>
+                    <td><button id="13" class="carta" onclick="mostrar(13)"></button></td>
+                    <td><button id="14" class="carta" onclick="mostrar(14)"></button></td>
+                    <td><button id="15" class="carta" onclick="mostrar(15)"></button></td>
+                </tr>
+            </table>
+        </section>
+
+        <!-- MENÚ LATERAL -->
+        <section class="section2">
+            <h3>MENU</h3>
+            <nav>
+                <ul>
+                    <li><a href="#" onclick="toAnimales()">Animales</a></li>
+                    <li><a href="#" onclick="toNumbers()">Números</a></li>
+                    <li><a href="#" onclick="toIngles()">Inglés</a></li>
+                    <li><a href="#" onclick="toCatalan()">Catalán</a></li>
+                </ul>
+            </nav>
+            <input type="button" id="volver" value="Volver a Jugar" onclick="reset()" />
+        </section>
+    </main>
 
 </body>
-
 </html>
